# HyperCat

./: .cursorrules  .gitignore  ActionList (2).md  CONTRIBUTING.md  HyperCat-ActionList.md  HyperCat_Enhancement_Plan.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  hypercat_identity_manifesto.md  hypercat_visual_interface.md  pypoject.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
HyperCat-compat-patch/: README-COMPAT.md
HyperCat-compat-patch/src/tests/: test_compat_diagram_checker.py
demo/: HYperCatDemo.ipynb  hypercat_algebraic_topology_demo.ipynb
docs/: README.md  agents.md  core.md  documentation.txt  getting-started.md  hypercat_agents_guide (1).md  hypercat_agents_guide .md  hypercat_dsl_guide.md  laws-and-proofs.md
examples/: 00_quickstart.ipynb  HyperCatDemo.ipynb  advanced-examples  advanced-examples.ipynb  hypercat_algebraic_topology_demo.ipynb  hypercats.ipynb
experimental/dsl/: HyperCatDSL
src/: __init__.py  hypercat.ipynb  natural.py  standard.py  twocategory.py
src/demos/hyper/: 01_nat_cert_and_deform.py
src/hypercat/: EnrichedCategory.py  HomotopyType  Operad.py  SimplicialSet  TopologicalSpace.py  __init__.py  adjunction.py  algebra.py  braidedmonoidalcategory.py  category.py  cocone.py  colimit.py  cone.py  core.py  functor.py  functorcategory.py  infinitycategory.py  limit.py  monoidalcategory.py  morphism.py  naturaltransformation.py  standardcategories.py  topos.py  twocell.py
src/hypercat/agents/: __init__.py  actions.py  eval.py  runtime.py
src/hypercat/algebraic/: __init__.py  operad.py
src/tests/: test_compat_finite_ncat.py  test_compat_ml.py  testcat.py
src/util/: DiagramsChecker.py  LaTeXDiagramExporter  diagrams_checker.py
tests/: test_agents_eval.py  test_agents_runtime.py  test_core.py  test_laws_category.py
(+29 files in other folders)
