[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hypercat"
version = "0.1.0"
description = "A sleek and expressive library for modeling categories, functors, and higher categorical structures."
authors = [
  {name = "Mirco Mannucci", email = "your@email.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
  "networkx",
  "matplotlib",
  "jupyter",
  "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hypercat"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
