[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hypercat"
version = "0.1.0"
description = "A sleek and expressive library for modeling categories, functors, and higher categorical structures."
authors = [
  {name = "Mirco Mannucci", email = "your@email.com"}
]
maintainers = [
  {name = "Kishore", email = "shimikeri.kishore@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["category-theory", "mathematics", "functors", "morphisms", "topology", "algebra"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "networkx>=2.6",
  "matplotlib>=3.3",
  "jupyter>=1.0",
  "pytest>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
